--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "express": "^4.17.1",
     "pdf2json": "^1.2.0",
     "pdfreader": "^1.2.7",
     "react": "^16.13.1",
@@ -18,7 +17,8 @@
     "remask": "0.1.0-alpha.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
