--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
-    "pdf2json": "^1.2.0",
-    "pdfreader": "^1.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "remask": "0.1.0-alpha.5"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && node server.js",
+    "dev": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
