--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_URL=https://fenix-faccoes.herokuapp.com
+# REACT_APP_URL=https://fenix-faccoes.herokuapp.com
+REACT_APP_URL=http://localhost:8000
