--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  
+  "engines": {
+    "node": "YOUR_VERSION_OF_NODE",
+    "npm": "YOUR_VERSION_OF_NPM"
   },
+
   "browserslist": {
     "production": [
       ">0.2%",
