--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "moment": "^2.29.1",
+    "node": "^17.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dotenv": "^0.1.3",
     "react-icons": "^3.11.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "remask": "0.1.0-alpha.5"
   },
   "scripts": {
